# claudecodeinstaller

./: .gitignore  LICENSE  README.md
.github/workflows/: build-gui.yml
claude-installer-gui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
claude-installer-gui/src/: App.tsx  main.tsx
claude-installer-gui/src-tauri/: Cargo.toml  tauri.conf.json
claude-installer-gui/src-tauri/src/: lib.rs  main.rs
claude-installer-gui/src-tauri/src/commands/: claude_installer.rs  git_installer.rs  mod.rs  node_installer.rs  path_manager.rs  post_install.rs  system_check.rs  uninstaller.rs
claude-installer-gui/src-tauri/src/utils/: download.rs  logger.rs  mod.rs  process.rs
claude-installer-gui/src/components/: ChecklistItem.tsx  ConfirmDialog.tsx  LanguageToggle.tsx  LogViewer.tsx  ProgressBar.tsx  TitleBar.tsx
claude-installer-gui/src/hooks/: useI18n.tsx  useInstaller.ts
claude-installer-gui/src/i18n/: en.json  th.json
claude-installer-gui/src/screens/: Completion.tsx  Installation.tsx  SystemCheck.tsx  Uninstall.tsx  Welcome.tsx
claude-installer-gui/src/styles/: globals.css
claude-installer-ps/: install-claude-code.ps1
