[package]
name = "claude-code-installer"
version = "1.0.0"
description = "A GUI installer for Claude Code on Windows"
authors = ["Claude Code Training"]
edition = "2021"

[lib]
name = "claude_code_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"

# HTTP downloads with streaming progress
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls"], default-features = false }
futures-util = "0.3"

# Windows-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
] }
